feat: add tournamentController and cors
