# src/controllers/UserController.js
@@ -4,48 +4,56 @@ class UserController {
 
   async index(req, res) {
     const conn = await db.connect();
-
+    
     const [rows, fields] = await conn.execute('SELECT id_usuario, nome, email, dataNascimento, cpf, cargo, nacionalidade FROM usuario');
     
     return res.status(200).json({ data: rows })
   }
  
   async getById(req, res) {
-    const { id } = req.body;
+    const { id } = req.params;
     const conn = await db.connect();
-
-    const [rows, fields] = await conn.execute(`SELECT nome, email, dataNascimento, cpf, nacionalidade, cargo FROM usuario WHERE id_usuario=${id}`);
     
-    return res.status(200).json({ data: rows[0] })
+    const [rows, fields] = await conn.execute(`SELECT nome, email, dataNascimento, cpf, nacionalidade, cargo FROM usuario WHERE id_usuario=?`, [id]);
+    
+    if (rows.length)
+      return res.status(200).json({ data: rows[0] })
+
+    return res.status(400).json({ message: 'Usuario não encontrado.' })
   }
 
   async create(req, res) {
-    const conn = await db.connect();
     const { nome, email, dataNascimento, cpf, nacionalidade, cargo, senha} = req.body;
-
-    const [rows, fields] = await conn.execute(`INSERT INTO usuario (nome, email, dataNascimento, cpf, nacionalidade, cargo, senha) VALUES ('${nome}', '${email}', '${dataNascimento}', '${cpf}', '${nacionalidade}', '${cargo}', '${senha}')`);
+    const conn = await db.connect();
     
-    return res.status(200);
+    const [rows, fields] = await conn.execute(`INSERT INTO usuario (nome, email, dataNascimento, cpf, nacionalidade, cargo, senha) VALUES (?, ?, ?, ?, ?, ?, ?)`, [nome, email, new Date(dataNascimento), cpf, nacionalidade, cargo, senha]);
+    
+    return res.status(200).json({ message: 'Usuario criado com sucesso.' });
   }
 
   async update(req, res) {
-    const conn = await db.connect();
     const { id, nome, email, dataNascimento, cpf, nacionalidade, cargo } = req.body;
+    const conn = await db.connect();
 
-    const result = await conn.query('UPDATE usuario SET ? WHERE id_usuario=?', [ { nome, email, dataNascimento, cpf, nacionalidade, cargo }, id], (err) => {
-      console.log(err)
-    });
+    const [{affectedRows}, fields] = await conn.query('UPDATE usuario SET ? WHERE id_usuario=?', [ { nome, email, dataNascimento: new Date(dataNascimento), cpf, nacionalidade, cargo }, id]);
     
-    return res.status(200);
+    
+    if (affectedRows)
+      return res.status(200).json({ message: 'Usuario atualizado com sucesso.' });
+      
+    return res.status(400).json({ message: 'Usuario não encontrado.' });
   }
 
   async delete(req, res) {
-    const conn = await db.connect();
     const { id } = req.params;
+    const conn = await db.connect();
 
-    const [rows, fields] = await conn.execute(`DELETE FROM usuario WHERE id_usuario=${id}`);
+    const [{affectedRows}, fields] = await conn.execute(`DELETE FROM usuario WHERE id_usuario=?`, [id]);
     
-    return res.status(200);
+    if (affectedRows)
+      return res.status(200).json({ message: 'Usuario deletado com sucesso.' });
+  
+    return res.status(400).json({ message: 'Usuario não encontrado.' });
   }
 }
 
