# src/routes/v1/users.routes.js
@@ -4,7 +4,7 @@ import UserController from '../../controllers/UserController';
 const userRoutes = new Router();
 
 userRoutes.get('/users', UserController.index);
-userRoutes.get('/user', UserController.getById);
+userRoutes.get('/user/:id', UserController.getById);
 userRoutes.post('/user', UserController.create);
 userRoutes.put('/user', UserController.update);
 userRoutes.delete('/user/:id', UserController.delete);
