# src/swagger_output.json
@@ -19,6 +19,57 @@
   },
   "paths": {
     "/api/users": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/user/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/user": {
       "post": {
         "description": "",
         "parameters": [
@@ -28,16 +79,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "password": {
+                "nome": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "roles": {
+                "dataNascimento": {
+                  "example": "any"
+                },
+                "cpf": {
+                  "example": "any"
+                },
+                "nacionalidade": {
+                  "example": "any"
+                },
+                "cargo": {
+                  "example": "any"
+                },
+                "senha": {
                   "example": "any"
                 }
               }
@@ -45,26 +105,12 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
           "200": {
             "description": "OK"
           }
         }
-      }
-    },
-    "/api/session": {
-      "post": {
+      },
+      "put": {
         "description": "",
         "parameters": [
           {
@@ -73,79 +119,25 @@
             "schema": {
               "type": "object",
               "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "nome": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/api/permissions": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "description": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/api/roles": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "description": {
+                "dataNascimento": {
                   "example": "any"
                 },
-                "permissions": {
+                "cpf": {
+                  "example": "any"
+                },
+                "nacionalidade": {
+                  "example": "any"
+                },
+                "cargo": {
                   "example": "any"
                 }
               }
@@ -160,10 +152,131 @@
             "description": "Bad Request"
           }
         }
-      },
+      }
+    },
+    "/api/tournaments": {
       "get": {
         "description": "",
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/tournament/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/tournament": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "any"
+                },
+                "modalidade": {
+                  "example": "any"
+                },
+                "dataStartCampeonato": {
+                  "example": "any"
+                },
+                "dataEndCampeonato": {
+                  "example": "any"
+                },
+                "premiacao": {
+                  "example": "any"
+                },
+                "qntdTimes": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "nome": {
+                  "example": "any"
+                },
+                "modalidade": {
+                  "example": "any"
+                },
+                "dataStartCampeonato": {
+                  "example": "any"
+                },
+                "dataEndCampeonato": {
+                  "example": "any"
+                },
+                "premiacao": {
+                  "example": "any"
+                },
+                "qntdTimes": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
